feat(site) ajout d'un header pour le premier article

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section class="station">
+  <article class="station__article">
+    <header class="station__header">
+      <p class="station__label">Station de ski</p>
+      <h2>Bienvenue à la station des Cimes</h2>
+      <p class="station__chapo">
+        Découvrez un domaine skiable moderne, une ambiance chaleureuse
+        et des pistes pour tous les niveaux.
+      </p>
+    </header>
+  </article>
+</section>
+
 </body>
 </html>
