feat(site) ajout base articles

--- a/index.html
+++ b/index.html
@@ -12,11 +12,34 @@
   <article class="station__article">
     <header class="station__header">
       <p class="station__label">Station de ski</p>
-      <h2>Bienvenue à la station des Cimes</h2>
+      <h2>Bienvenue à la station Vent les pins</h2>
       <p class="station__chapo">
         Découvrez un domaine skiable moderne, une ambiance chaleureuse
         et des pistes pour tous les niveaux.
       </p>
+      <div class="station__layout">
+      <div class="station__main">
+        <figure class="station__figure">
+          <img src="img/marmotte.jpg" alt="Entrée des pistes de ski">
+          <figcaption>Entrée principale des pistes et front de neige.</figcaption>
+        </figure>
+
+        <h3>Un domaine pour tous</h3>
+        <p>
+          Plus de 40 km de pistes balisées, un snowpark, des espaces débutants
+          et des zones ludiques pour les familles.
+        </p>
+        <p>
+          Les remontées mécaniques de dernière génération permettent
+          d’accéder rapidement aux sommets et aux points de vue panoramiques.
+        </p>
+
+        <figure class="station__figure">
+          <img src="img/vue_ensemble.jpg" alt="Vue d'ensemble de la station de ski">
+          <figcaption>Vue d’ensemble de la station au coucher du soleil.</figcaption>
+        </figure>
+      </div>
+
     </header>
   </article>
 </section>
