--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=map" />
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="h-[200vh]">
     <!-- bg-[url(img/header_bg.avif)] -->
     <header class=" w-screen h-[90vh] bg-cover flex p-25 font-[Segoe UI] overflow-clip">
 
-        <div class=" w-[55%] flex flex-col gap-10 p-10 text-white">
-            <h1 class="text-6xl font-bold text-shadow-black text-shadow-2xs ">Vent les pins</h1>
-            <h2 class="text-4xl text-shadow-black text-shadow-2xs font-semibold">Un froid qui va t'arracher la geule</h2>
-            <div class="mt-[20%] flex gap-10">
+        <div class=" w-[55%] flex flex-col gap-10 p-10 text-white ">
+            <h1 class="text-6xl font-bold text-shadow-black text-shadow-2xs onscroll-fast">Vent les pins</h1>
+            <h2 class="text-4xl text-shadow-black text-shadow-2xs font-semibold onscroll-fast">Un froid qui va t'arracher la geule</h2>
+            <div class="mt-[20%] flex gap-10 onscroll">
                 <button class="bg-[#1b232b] font-bold p-3 text-shadow-black text-shadow-2xs rounded-3xl border-2 text-center gap-5 hover:bg-[#dde5f4] hover:text-black transition-all duration-200">
                     PROFITE DE NOS OFFRES
                 </button>
@@ -33,7 +34,7 @@
 
         <!-- bg img wrapper, utilisé pour le filter -->
         <div class="absolute top-0 left-0 w-screen h-[90vh] overflow-hidden -z-10 ">
-            <img class="scale-110 w-screen h-[90vh] object-cover -z-20 blur-xs brightness-80" src="img/header_bg.avif" alt="">
+            <img class="scale-110 onscroll w-screen h-[90vh] object-cover -z-20 blur-xs brightness-80" src="img/header_bg.avif" alt="">
         </div>
     </header>
 </body>
