modification de style mineur sur le css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class=" w-[55%] flex flex-col gap-10 p-10 text-white ">
             <h1 class="text-6xl font-bold text-shadow-black text-shadow-2xs onscroll-fast">Vent les pins</h1>
             <h2 class="text-4xl text-shadow-black text-shadow-2xs font-semibold onscroll-fast">Un froid qui va t'arracher la geule</h2>
-            <div class="mt-[20%] flex gap-10 onscroll">
+            <div class="mt-[20%] flex gap-10 onscroll-slower">
                 <button class="bg-[#1b232b] font-bold p-3 text-shadow-black text-shadow-2xs rounded-3xl border-2 text-center gap-5 hover:bg-[#dde5f4] hover:text-black transition-all duration-200">
                     PROFITE DE NOS OFFRES
                 </button>
