--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 </body>
+
+<footer class="footer">
+
+    <img src="img/image_1.png" alt="Logo de sapin" class="footer-logo">
+
+  <div class="footer-top">
+    <div class="footer-socials">
+      <h3>Rejoins-nous !</h3>
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Whatsapp</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <h3>Contactez-nous</h3>
+      <ul>
+        <li>Email: ventlespins@gmail.com</li>
+        <li>Téléphone: +33 1 23 45 67 89</li>
+        <li>Adresse: 123 Rue des Pins, 75000 Paris, France</li>
+      </ul> 
+    </div>
+
+  <div class="footer-bottom">
+    <ul>
+      <li><a href="#">Mentions légales</a></li>
+      <li><a href="#">Données personnelles</a></li>
+      <li><a href="#">Plan du site</a></li>
+      <li><a href="#">Accessibilité</a></li>
+      <li><a href="#">Espace presse</a></li>
+      <li><a href="#">Cookies</a></li>
+    </ul>
+  </div>
+</div> 
+
+</div>
+
+</footer>
+
 </html>
